src/tests/snapshots/tests__layout_under_150_width_full_height.snap
---
source: src/tests/mod.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total Rate Up/Down: 0Bps/0Bps                                                                                                                       
┌Utilization by connection──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Connection                                          Process               Rate Up/Down                                                             │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Utilization by process name─────────────────────────────────────────────┐┌Utilization by remote ip─────────────────────────────────────────────────┐
│Process                                   Rate Up/Down                  ││Remote Address                            Rate Up/Down                   │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
└────────────────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────┘

