src/tests/snapshots/tests__multiple_packets_of_traffic_from_different_connections-2.snap
---
source: tests/cli.rs
expression: "&terminal_draw_events_mirror[1]"
---
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
 10.0.0.2:443 => 1.1.1.1:12345 (tcp)                1                    0Bps/24Bps             1                              1                              0Bps/24Bps                      
 10.0.0.2:443 => 2.2.2.2:54321 (tcp)                4                    0Bps/19Bps             4                              1                              0Bps/19Bps                      
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                1.1.1.1                                            1                    0Bps/24Bps            
                                                                                                2.2.2.2                                            1                    0Bps/19Bps            
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              

